# think-onwards-no-second-guessing

./: .gitignore  AGENT_BRIEF.md  DECISION_QUALITY.md  LICENSE  README.md  SUBMISSIONS.md  add_submission.py  hard_veto_wells.txt  orig_hard_veto_wells.txt  pyproject.toml  requirements.txt  uwi_well_ids.txt  uwi_wells.txt
.github/agents/: petrophysics-optimizer.agent.md  petrophysics-tuner.agent.md
.kimchi/: MEMORY.md  README.md
.kimchi/agents/: petrophysics-optimizer.md  petrophysics-skill.md  petrophysics-tuner.md  petrophysics-workflow.md
.kimchi/docs/: external_skills_compaction.md
agents/: EXPLORE_FINDINGS.md  README.md  petrophysics_agent.yaml
experiments/: analyze_metadata_signal.py  find_mnemonic_signatures.py  find_precision_signatures.py  find_synthetic_signatures.py
outputs/: FINAL_2_SLOTS.txt  FINAL_DAY_PLAN.txt  META_rebuild_report.txt  META_v2_final_report.txt  QUALITY_build_notes.txt  meta_scores.csv  metadata_v2_analysis.json  unsup_scores.csv  validation_report.md
outputs/dashboard/: index.html  submissions.json
outputs/experiments/: A4_PERM_RECAL_day3best.md  A4_PHIE_NEUTRON_ONLY_day3best.md  A4_WINNER_day3best_althp.md  CONS_400_sw025.md  CONS_400_sw035.md  DAY4_CLOSERS.md  (+15 more)
reff/: ThinkOnward - Accelerating Energy Industry Innovation.html  _extracted.txt
scripts/: honeypot_clf_probe.py  scan_las_metadata.py  thickness.py
src/: __init__.py  config.py  curve_mapping.py  dashboard.py  honeypot_detector.py  honeypot_unsup.py  ingest.py  las_writer.py  main.py  metadata_detector.py  pay_classifier.py  petrophysics.py  qc.py  validation.py
(+45 files in other folders)
